--- a/index.html
+++ b/index.html
@@ -4,10 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>nahidonhteway</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,700;1,100;1,500&family=Roboto+Condensed:ital,wght@0,300;0,400;1,300;1,700&family=Shizuru&family=Supermercado+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello world!</h1>
+    <section>
+        <div class="half-width">
+            <h1>Welcome to</h1>
+            <h1 class="me"><span class="name"> Nahid Hasan </span> Website</h1>
+             <h3>Professional web developer</h3>
+             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates libero molestiae voluptatum. Cumque, perferendis cupiditate tempore perspiciatis in, reiciendis magnam enim est sint fugiat molestiae.</p>
+             <button>HIRE ME</button>
+        </div>
+        <div class="half-width">
+            <img src="images/Nahid Hasan.png" alt="pic">
+        </div>
+    </section>
 </body>
 </html>
