--- a/index.html
+++ b/index.html
@@ -9,16 +9,41 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+    <section class="top-banner">
         <div class="half-width">
             <h1>Welcome to</h1>
             <h1 class="me"><span class="name"> Nahid Hasan </span> Website</h1>
              <h3>Professional web developer</h3>
              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates libero molestiae voluptatum. Cumque, perferendis cupiditate tempore perspiciatis in, reiciendis magnam enim est sint fugiat molestiae.</p>
-             <button>HIRE ME</button>
+             <a class="link" href="https://www.google.com/?hl=bn" target="_blank">CLICK HERE</a>
         </div>
         <div class="half-width">
             <img src="images/Nahid Hasan.png" alt="pic">
+        </div>
+    </section>
+    <section class="dream">
+        <div class="half-width">
+            <img src="images/Nahid Hasan.png" alt="pic">
+        </div>
+        <div class="half-width">
+            <h1>Welcome to</h1>
+            <h1 class="me"><span class="name"> Nahid Hasan </span> Website</h1>
+             <h3>Professional web developer</h3>
+             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates libero molestiae voluptatum. Cumque, perferendis cupiditate tempore perspiciatis in, reiciendis magnam enim est sint fugiat molestiae.</p>
+             <a class="link" href="https://www.google.com/?hl=bn" target="_blank">DOWNLOAD RESUME</a>
+        </div>
+        </div>
+    </section>
+    <section class="third" id="border">
+        <div class="half-width single-experience">
+            <h2>Full Stack Web Developer</h2>
+            <h4 class="color">2021-Present|Pro Level Developer</h4>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit beatae inventore voluptates vero voluptate, commodi sint ipsam! Accusantium, voluptatum repellendus.</p>
+        </div>
+        <div class="half-width single-experience" id="bordertwo">
+            <h2>Baby Web Developer</h2>
+            <h4 class="color">2021-Present|Programming Hero Developer</h4>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit beatae inventore voluptates vero voluptate, commodi sint ipsam! Accusantium, voluptatum repellendus.</p>
         </div>
     </section>
 </body>
